iptables/files-iptables.rules
# Generated by iptables-save v1.4.21 on Thu Mar 23 14:35:58 2017
*filter
:INPUT DROP [1:229]
:FORWARD DROP [0:0]
:OUTPUT DROP [12:760]
-A INPUT -s 192.168.0.40/32 -p tcp -m tcp --sport 389 -j ACCEPT
-A INPUT -s 192.168.0.40/32 -p tcp -m tcp --sport 636 -j ACCEPT
-A INPUT -s 192.168.0.40/32 -p tcp -m tcp --sport 88 -j ACCEPT
-A INPUT -s 192.168.0.40/32 -p udp -m udp --sport 389 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 21 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 139 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 445 -j ACCEPT
-A OUTPUT -d 192.168.0.40/32 -p tcp -m tcp --dport 389 -j ACCEPT
-A OUTPUT -d 192.168.0.40/32 -p tcp -m tcp --dport 636 -j ACCEPT
-A OUTPUT -d 192.168.0.40/32 -p tcp -m tcp --dport 88 -j ACCEPT
-A OUTPUT -d 192.168.0.40/32 -p udp -m udp --dport 389 -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 21 -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 22 -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 139 -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 445 -j ACCEPT
COMMIT
# Completed on Thu Mar 23 14:35:58 2017
