iptables/www-iptables.rules
# Generated by iptables-save v1.4.14 on Mon Nov 15 21:43:30 2010
*filter
:INPUT DROP [3:704]
:FORWARD DROP [0:0]
:OUTPUT DROP [17:1574]
-A INPUT -s 192.168.0.40/32 -p tcp -m tcp --sport 389 -j ACCEPT
-A INPUT -s 192.168.0.40/32 -p tcp -m tcp --sport 636 -j ACCEPT
-A INPUT -s 192.168.0.40/32 -p tcp -m tcp --sport 88 -j ACCEPT
-A INPUT -s 192.168.0.40/32 -p udp -m udp --sport 389 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -d 192.168.0.40/32 -p tcp -m tcp --dport 389 -j ACCEPT
-A OUTPUT -d 192.168.0.40/32 -p tcp -m tcp --dport 636 -j ACCEPT
-A OUTPUT -d 192.168.0.40/32 -p tcp -m tcp --dport 88 -j ACCEPT
-A OUTPUT -d 192.168.0.40/32 -p udp -m udp --dport 389 -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 22 -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 80 -m conntrack --ctstate ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 443 -m conntrack --ctstate ESTABLISHED -j ACCEPT
COMMIT
# Completed on Mon Nov 15 21:43:30 2010
